--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                             </div>
                         </div>
                     </div>
-                     /.row (nested) --!>
+                     /.row (nested) 
                 </div>
-                 /.col-lg-10 --!>
+                 /.col-lg-10 
             </div>
-             /.row --!>
+             /.row 
         </div>
-         /.container --!>
+         /.container 
     </section> -->
 
     <!-- Callout 
@@ -165,28 +165,28 @@
                     <!--<h2>Our Work</h2>-->
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="columbia/sectionNOZOMBIES2.jpg">
-                                    <img class="img-portfolio img-responsive" src="columbia/sectionNOZOMBIES2_sm.jpg">
+                                <a href="columbia/1/sectionNOZOMBIES2.jpg">
+                                    <img class="img-portfolio img-responsive" src="columbia/1/sectionNOZOMBIES2_sm.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                <a href="columbia/1/axo explosion.jpg">
+                                    <img class="img-portfolio img-responsive" src="columbia/1/axo explosion_sm.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
@@ -200,7 +200,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
@@ -208,8 +208,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <!-- /.row (nested) 
+                    <a href="#" class="btn btn-dark">View More Items</a>-->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -231,15 +231,15 @@
         </div>
     </aside>-->
 
-    <!-- Map
+    <!-- Map-->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//e.issuu.com/embed.html#23923228/38906245"></iframe>
         <br />
         <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+            <a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245"></a>
         </small>
         </iframe>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -248,8 +248,8 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Questions or Commissions</strong>
                     </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <!--<p>3481 Melrose Place
+                        <br>Beverly Hills, CA 90210</p>-->
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (601) 618-9960</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="miranda.shugars@gmail.com">miranda.shugars@gmail.com</a>
