--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/0B2hH5-0tW8qTVHJvc2JKczRpLTA/view" style="width:600px; height:500px;" frameborder="0"></iframe>
+		<iframe src="http://docs.google.com/gview?url=http://docdro.id/kUtX6vh" style="width:600px; height:500px;" frameborder="0"></iframe>
 		<!--<object data="shugars_CV.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
 		</object> -->
 	</div>
