--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 	</h5>
 	<hr>
         <div class="row">
-		<iframe src="http://docs.google.com/gview?url=https://www.docdroid.net/kUtX6vh/shugars-cv.pdf.html&embedded=true" style="width:800px; height:1040px;" frameborder="0"></iframe>
+		<iframe src="https://docs.google.com/viewer?srcid=0B2hH5-0tW8qTVHJvc2JKczRpLTA&pid=explorer&efh=false&a=v&chrome=false&embedded=true" style="width:800px; height:1040px;" frameborder="0"></iframe>
 		<!--<object data="shugars_CV.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="80%" height="1040">
 		</object> -->
 	</div>
